src/objects/c2g__codaSingleMapping__c.object
<CustomObject>
    <description>Stores a mapping created in FinancialForce XL.</description>
    <fields>
        <fullName>c2g__ExcelColumn__c</fullName>
        <label>Excel Column</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__MappingFormat__c</fullName>
        <label>Mapping Format</label>
        <referenceTo>c2g__codaMappingFormat__c</referenceTo>
        <relationshipLabel>Singles Mapping</relationshipLabel>
        <relationshipName>SinglesMapping</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__ServerColumn__c</fullName>
        <label>Server Column</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Header</fullName>
                </value>
                <value>
                    <fullName>Line Item</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit Of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Single Mapping</label>
    <nameField>
        <label>Single Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Single Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>